--- a/sns/client/src/index.css
+++ b/sns/client/src/index.css
@@ -1,285 +1,339 @@
 :root {
-	--color-white: #f9fafa;
-	--color-black: #141518;
-	--color-blue: #1a9ff0;
-	--color-darkBlue: #073d5d;
-	--color-grey: #dee0e0;
-	--color-darkGrey: #969696;
-	--color-red: #cc473d;
-	--color-green: #7aa300;
-	--color-yellow: #fff6b0;
-	--color-shadow: rgba(0, 0, 0, 0.2);
-	--size-avatar: 38px;
-}
-
-body {
-	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-		sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	background: var(--color-darkBlue);
-	display: flex;
-	justify-content: center;
-	margin: 0;
-	color: var(--color-white);
-}
-
-code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-		monospace;
+	--color-black: #161616;
+	--color-white: #ffffff;
+	--color-purple: #5856f6;
+	--color-grey: #e5e5e5;
+	--color-d-grey: #bfbfbf;
+	--color-l-grey: rgba(230, 230, 230, 0.5);
 }
 
 * {
+	margin: 0;
+	padding: 0;
 	box-sizing: border-box;
 }
 
-button {
-	background-color: transparent;
-	outline: 0;
-	border: 0;
+html {
+	width: 100%;
+	height: 100%;
+}
+
+body {
+	display: flex;
+	justify-content: center;
+	width: 100%;
+	height: 100%;
+	font-family: 'Noto Sans KR', sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	background: var(--color-d-grey);
 	color: var(--color-white);
+}
+
+ul > li,
+ol > li {
+	list-style: none;
+}
+
+button {
 	cursor: pointer;
 }
 
 .app {
 	width: 100vw;
-	max-width: 500px;
-	height: 100vh;
-	background-color: var(--color-white);
-	display: flex;
-	flex-direction: column;
-	box-shadow: 0 5px 30px 0 rgb(0 0 0 / 20%), 0 5px 20px 0 rgb(0 0 0 / 19%);
-}
-
-.header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	background-color: var(--color-black);
-	padding: 8px;
-}
-
-.logo {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	cursor: pointer;
-}
-
-.logo-img {
-	width: 32px;
-	height: 32px;
-}
-
-.logo-name {
-	font-size: 2rem;
-	margin: 8px;
-}
-
-.logo-user {
-	font-size: 0.7rem;
-	color: var(--color-blue);
-	padding-top: 8px;
-}
-
-.menu {
-	color: var(--color-white);
-}
-
-.menu-item {
-	color: var(--color-white);
-	font-weight: bold;
-}
-
-.banner {
-	margin: 8px;
-	padding: 8px;
-	font-size: 1rem;
-	font-weight: bold;
-}
-
-.banner-red {
-	background-color: var(--color-red);
-}
-
-.banner-green {
-	background-color: var(--color-green);
-}
-
-.auth-form {
-	display: flex;
-	flex-direction: column;
-	color: var(--color-black);
-	padding: 16px 32px;
-}
-
-.form-btn {
-	font-size: 1.2rem;
-	background: var(--color-blue);
-	font-weight: bold;
-	padding: 4px;
-}
-
-.form-btn-small {
-	font-size: 0.8rem;
-}
-
-.auth-form-btn {
-	margin: 16px;
-}
-
-.form-input {
-	font-size: 1rem;
-	margin: 4px 0;
-}
-
-.form-input:focus {
-	outline: 2px dotted var(--color-blue);
-}
-
-.form-signup {
-	margin-top: 8px;
-}
-
-.posts {
+	max-width: 430px;
 	height: 100%;
-	overflow-y: auto;
-	color: var(--color-black);
-	padding: 16px;
-	list-style: none;
-	/* Firefox */
-	scrollbar-width: 6px;
-	scrollbar-color: var(--color-darkGrey);
-	scrollbar-face-color: var(--color-blue);
+	background: var(--color-black);
 }
 
-.posts::-webkit-scrollbar {
-	/* Safari and Chrome */
-	background-color: var(--color-darkGrey);
-	width: 6px;
-}
-
-.posts::-webkit-scrollbar-thumb {
-	/* Safari and Chrome */
-	background-color: var(--color-blue);
-}
-
-.posts-empty {
-	font-size: 2rem;
-	font-weight: bold;
-	color: var(--color-grey);
-	text-align: center;
-}
-
-.post {
-	box-shadow: 0 4px 8px 0 var(--color-shadow);
-	transition: 0.3s;
-	margin-bottom: 16px;
-	padding: 8px;
+header {
 	display: flex;
+	align-items: center;
 	justify-content: space-between;
+	padding: 0 16px;
+	height: 60px;
+	border-bottom: 1px solid var(--color-grey);
 }
 
-.post:hover {
-	box-shadow: 0 8px 16px 0 var(--color-shadow);
+h1.logo-name {
+	font-size: 20px;
+	font-weight: 700;
 }
 
-.post-container {
+nav {
 	display: flex;
-	width: 100%;
+	align-items: center;
+	justify-content: flex-end;
+}
+
+ul.menu {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+ul.menu > li {
+	margin-right: 16px;
+	font-size: 14px;
+}
+
+button.menu-item {
+	background: transparent;
+	border: none;
+	border-radius: 0;
+	color: var(--color-d-grey);
+}
+
+button.menu-item:hover {
+	color: var(--color-purple);
+}
+
+.avatar-wrap {
+	flex: 0 0 36px;
+	width: 36px;
+	height: 36px;
+	border-radius: 100%;
+	overflow: hidden;
 }
 
 .avatar-img {
-	width: var(--size-avatar);
-	height: var(--size-avatar);
-	border-radius: 50%;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	vertical-align: middle;
 }
 
 .avatar-txt {
-	width: var(--size-avatar);
-	height: var(--size-avatar);
-	background-color: var(--color-grey);
-	border-radius: 50%;
-	text-align: center;
-	font-size: 1.5rem;
-	font-weight: bold;
-	line-height: var(--size-avatar);
-}
-.post-body {
-	margin: 0px 8px;
-	width: 100%;
-}
-
-.post-name {
-	font-size: 0.9rem;
-	font-weight: bold;
-}
-
-.post-username,
-.post-date {
-	font-size: 0.7rem;
-	margin-left: 4px;
-	color: var(--color-blue);
-	font-weight: bold;
-}
-
-.post-username {
-	cursor: pointer;
-	transition: 200ms;
-}
-
-.post-username:hover {
-	background: var(--color-yellow);
-}
-
-.post-date {
-	color: var(--color-darkGrey);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+	font-size: 16px;
+	font-weight: 700;
+	line-height: 36px;
+	color: var(--color-black);
+	background: var(--color-d-grey);
 }
 
 .post-form {
-	display: flex;
-	width: 100%;
-	padding: 4px 16px;
-	background-color: var(--color-grey);
+	position: relative;
+	padding: 20px 16px;
 }
 
-.post-input {
+.form-input {
 	width: 100%;
-	margin-right: 4px;
+	height: 50px;
+	border-radius: 6px;
+	border: 1px solid var(--color-grey);
+	background: transparent;
+	color: var(--color-white);
+	padding: 0 30px 0 10px;
+	outline: none;
+	font-size: 16px;
+}
+
+.form-input:focus {
+	border-color: var(--color-purple);
+}
+.form-input::placeholder {
+	color: var(--color-d-grey);
+}
+
+button.form-btn {
+	position: absolute;
+	top: 50%;
+	right: 30px;
+	transform: translateY(-50%);
+	width: 32px;
+	height: 32px;
+	background: var(--color-d-grey);
+	mask: url('./assets/img/ico_send.svg') no-repeat center center;
+	mask-size: cover;
+	opacity: 0.5;
+}
+
+button.form-btn:hover {
+	background: var(--color-purple);
+	opacity: 1;
+}
+
+p.posts-empty {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	font-size: 20px;
+	font-weight: 700;
+	color: var(--color-l-grey);
+	margin-top: 40px;
+	text-align: center;
+}
+
+ul.posts {
+	height: calc(100% - 150px);
+	overflow-y: overlay;
+	color: var(--color-white);
+	padding: 0 16px 20px;
+	/* Firefox */
+	scrollbar-width: 6px;
+	scrollbar-color: var(--color-l-grey);
+	scrollbar-face-color: var(--color-d-grey);
+}
+
+ul.posts::-webkit-scrollbar {
+	/* Safari and Chrome */
+	background: var(--color-l-grey);
+	width: 6px;
+	border-radius: 3px;
+}
+
+ul.posts::-webkit-scrollbar-thumb {
+	/* Safari and Chrome */
+	background-color: var(--color-d-grey);
+	border-radius: 3px;
+}
+
+li.post {
+	position: relative;
+	border: 1px solid var(--color-grey);
+	border-radius: 6px;
+	margin-bottom: 20px;
+}
+
+li.post:last-child {
+	margin-bottom: 0;
+}
+
+.post-container {
+	padding: 10px;
+}
+
+.post-head {
+	display: grid;
+	grid-template: repeat(2, max-content) / min-content min-content 1fr;
+	gap: 3px 6px;
+	width: 100%;
+	align-items: center;
+}
+
+.post-head > .avatar-wrap {
+	width: 52px;
+	height: 52px;
+	margin-right: 10px;
+	grid-row: span 2;
+}
+
+.post-name {
+	font-size: 16px;
+}
+
+.post-id {
+	font-size: 12px;
+	color: var(--color-purple);
+	cursor: pointer;
+}
+
+.post-date {
+	font-size: 12px;
+	color: var(--color-d-grey);
+	grid-column: span 2;
+	align-self: flex-start;
+}
+
+.post-body {
+	padding-left: 68px;
+	font-size: 14px;
 }
 
 .post-action {
+	position: absolute;
+	top: 16px;
+	right: 10px;
 	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
+	justify-content: flex-end;
 }
 
 .post-action-btn {
-	font-size: 1.1rem;
-	font-weight: bold;
-	color: var(--color-blue);
-	transition: transform 300ms;
+	width: 32px;
+	height: 32px;
+	border: none;
+	background: var(--color-d-grey);
+	opacity: 0.5;
 }
 
-.post-delete:hover {
-	transform: scale(1.5);
+.post-action-btn:not(:first-child) {
+	margin-left: 10px;
+}
+
+.post-edit-btn {
+	mask: url('./assets/img/ico_edit.svg') no-repeat center center;
+	mask-size: 80%;
+}
+
+.post-delete-btn {
+	mask: url('./assets/img/ico_close.svg') no-repeat center center;
+	mask-size: cover;
+}
+
+.post-action-btn:hover {
+	background: var(--color-purple);
+	opacity: 1;
+}
+
+.edit-post-form {
+	margin-top: 16px;
+	font-size: 14px;
+}
+
+.post-input {
+	height: auto;
+	padding: 5px;
 }
 
 .edit-post-form-action {
-	float: right;
-	margin-top: 4px;
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+	margin-top: 16px;
+}
+.edit-post-form-action > button {
+	min-width: 58px;
+	padding: 4px 6px;
+	border-radius: 6px;
+	border: none;
+	font-size: 14px;
+	opacity: 0.5;
 }
 
-.form-btn-update,
-.form-btn-cancel {
-	font-size: 0.8rem;
-	background: var(--color-blue);
-	font-weight: bold;
-	padding: 4px;
+.edit-post-form-action > button:hover {
+	opacity: 1;
 }
+
+.form-btn-update {
+	background: var(--color-purple);
+	color: var(--color-white);
+	margin-right: 16px;
+}
+
 .form-btn-cancel {
-	margin-left: 8px;
-	background: var(--color-red);
+	background-color: var(--color-d-grey);
+	color: var(--color-black);
+}
+
+.auth-form {
+	padding: 20px 16px;
+}
+
+.auth-form > input:not(:last-child) {
+	margin-bottom: 16px;
+}
+
+.auth-form-btn {
+	width: 100%;
+	height: 32px;
+	background: var(--color-purple);
+	color: var(--color-white);
+	margin-top: 20px;
+	border: none;
+	border-radius: 6px;
 }
