feat: authentication api added Add authentication api using jwt todo: front-end sign in & out

--- a/sns/client/src/index.css
+++ b/sns/client/src/index.css
@@ -337,3 +337,12 @@ li.post:last-child {
 	border: none;
 	border-radius: 6px;
 }
+
+.form-signup {
+	display: flex;
+	margin-bottom: 20px;
+}
+
+.form-signup > p {
+	flex: 1;
+}
